Glue 스토리지 서비스 기능 수정
