# docs/swagger.yaml
@@ -2982,6 +2982,12 @@ definitions:
       secret_key:
         example: secretkey
         type: string
+      suspended:
+        enum:
+        - "0"
+        - "1"
+        example: "0"
+        type: string
       username:
         example: user01
         type: string
@@ -5274,7 +5280,7 @@ paths:
       - Glue-ISCSI
   /glue/iscsi/discovery:
     get:
-      description: Ceph dashboard API로 iSCSI discovery auth 정보를 조회합니다.
+      description: Glue dashboard API로 iSCSI discovery auth 정보를 조회합니다.
       produces:
       - application/json
       responses:
@@ -5296,7 +5302,7 @@ paths:
     put:
       consumes:
       - application/json
-      description: Ceph dashboard API로 iSCSI discovery auth 정보를 수정합니다.
+      description: Glue dashboard API로 iSCSI discovery auth 정보를 수정합니다.
       parameters:
       - description: iSCSI discovery request
         in: body
@@ -5330,7 +5336,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Ceph dashboard API로 iSCSI target을 삭제합니다.
+      description: Glue dashboard API로 iSCSI target을 삭제합니다.
       parameters:
       - description: iSCSI target delete request
         in: body
@@ -5361,7 +5367,7 @@ paths:
       tags:
       - Glue-ISCSI
     get:
-      description: Ceph dashboard API로 iSCSI target 목록 또는 상세를 조회합니다.
+      description: Glue dashboard API로 iSCSI target 목록 또는 상세를 조회합니다.
       parameters:
       - description: iSCSI target IQN
         in: query
@@ -5392,7 +5398,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Ceph dashboard API로 iSCSI target을 생성합니다.
+      description: Glue dashboard API로 iSCSI target을 생성합니다.
       parameters:
       - description: iSCSI target request
         in: body
@@ -5425,7 +5431,7 @@ paths:
     put:
       consumes:
       - application/json
-      description: Ceph dashboard API로 iSCSI target을 수정합니다.
+      description: Glue dashboard API로 iSCSI target을 수정합니다.
       parameters:
       - description: iSCSI target update request
         in: body
@@ -6651,7 +6657,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Ceph dashboard API로 RGW bucket을 생성/수정하고, 삭제는 radosgw-admin bucket
+      description: Glue dashboard API로 RGW bucket을 생성/수정하고, 삭제는 radosgw-admin bucket
         rm 명령으로 실행합니다.
       parameters:
       - description: RGW bucket request
@@ -6721,7 +6727,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Ceph dashboard API로 RGW bucket을 생성/수정하고, 삭제는 radosgw-admin bucket
+      description: Glue dashboard API로 RGW bucket을 생성/수정하고, 삭제는 radosgw-admin bucket
         rm 명령으로 실행합니다.
       parameters:
       - description: RGW bucket request
@@ -6755,7 +6761,7 @@ paths:
     put:
       consumes:
       - application/json
-      description: Ceph dashboard API로 RGW bucket을 생성/수정하고, 삭제는 radosgw-admin bucket
+      description: Glue dashboard API로 RGW bucket을 생성/수정하고, 삭제는 radosgw-admin bucket
         rm 명령으로 실행합니다.
       parameters:
       - description: RGW bucket request
@@ -6824,7 +6830,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: SCVM 로컬에서 radosgw-admin user create/modify/rm 명령으로 RGW user를 변경합니다.
+      description: SCVM 로컬에서 radosgw-admin user create/modify/rm 명령으로 RGW user를 변경합니다. user 수정 시 suspended는 0(활성, user enable) 또는 1(비활성, user suspend)입니다.
       parameters:
       - description: RGW user request
         in: body
@@ -6887,7 +6893,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: SCVM 로컬에서 radosgw-admin user create/modify/rm 명령으로 RGW user를 변경합니다.
+      description: SCVM 로컬에서 radosgw-admin user create/modify/rm 명령으로 RGW user를 변경합니다. user 수정 시 suspended는 0(활성, user enable) 또는 1(비활성, user suspend)입니다.
       parameters:
       - description: RGW user request
         in: body
@@ -6920,7 +6926,7 @@ paths:
     put:
       consumes:
       - application/json
-      description: SCVM 로컬에서 radosgw-admin user create/modify/rm 명령으로 RGW user를 변경합니다.
+      description: SCVM 로컬에서 radosgw-admin user create/modify/rm 명령으로 RGW user를 변경합니다. user 수정 시 suspended는 0(활성, user enable) 또는 1(비활성, user suspend)입니다.
       parameters:
       - description: RGW user request
         in: body
